--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "emoji-picker-react": "^4.5.1",
     "firebase": "^10.3.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
